# pistachio

./: .gitignore  Asymmetric Peak Analysis - Template.ipynb  Interactive Analysis.ipynb  LICENSE  MANIFEST.in  ReadMe.md  TMM_tests.py  Untitled.ipynb  concentration_analysis.py  convert_unit.py  data_io.py  fit_index.py  get_k.py  kramers_kronig.py  layered_media.py  material_properties.py  math_functions.py  playing_with_matrices.py  plots.py  pmath.py  polariton_processing.py  runTMM.py  setup.cfg  setup.py  transfer_matrix.py  transfer_matrix_method.py
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
config_files/: FPI_vacant_template.yaml  George2015.yaml  device_double_layer.yaml  device_single_layer.yaml  experiment.yaml  experiment_benzonitrile.yaml  filmetrics_SiO2_Au.yaml  filmetrics_al.yaml  filmetrics_au.yaml  filmetrics_device.yaml  filmetrics_fpi1.yaml  filmetrics_fpi1_test.yaml  filmetrics_fpi2.yaml  filmetrics_pbse.yaml  filmetrics_sio2.yaml  rfinfo_ag.yaml  rfinfo_au.yaml  rfinfo_ethanol.yaml  rfinfo_fpi1.yaml  test.yaml  test_au.yaml  test_nreal.yaml  unmatched_datapoints.yaml  vacant_10nmAu_20umSpacer.yaml  vacant_10nmAu_6umSpacer.yaml  vacant_10nmAu_8umSpacer.yaml  vacant_14nmAu_12.3umSpacer.yaml  vacant_15nmAu_12.23umSpacer.yaml  vacant_15nmAu_6umSpacer.yaml  vacant_3nmAu_12.23umSpacer.yaml  vacant_5nmAu_12.23umSpacer.yaml  vacant_6nmAu_12.23umSpacer.yaml  vacant_7nmAu_12.23umSpacer.yaml  waveguide.yaml
data/: Transmittance-calcs.txt.tsv  au_n_2.csv  testing.csv  transmittance-calcs_Au.csv
default/: Au.csv  air_au100nm_air.yaml  test0.csv  test1.csv  (+6 more)
(+311 files in other folders)
