[metadata]
name = pistachio
version = 0.10.2
author = Garrek Stemo
author_email = garrekstemo@icloud.com
description = A transfer matrix algorithm and related tools
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/garrekds/pistachio
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Physics

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src
